# nlp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ARCHITECTURE.md
notebooks/: main.ipynb
src/nlp_toolkit/: __init__.py  config.py  logging_config.py  resources.py
src/nlp_toolkit/analysis/: __init__.py  corpus_stats.py  frequency.py  regex_search.py
src/nlp_toolkit/data/: __init__.py  loaders.py
src/nlp_toolkit/features/: __init__.py  tfidf.py
src/nlp_toolkit/nlp/: __init__.py  ner.py
src/nlp_toolkit/preprocessing/: __init__.py  text.py
src/nlp_toolkit/sentiment/: __init__.py  lexicon.py
src/nlp_toolkit/utils/: __init__.py  reproducibility.py
tests/: conftest.py  test_analysis.py  test_data_loaders.py  test_preprocessing.py  test_sentiment.py
